--- a/src/main/resources/templates/Productcategorylist.html
+++ b/src/main/resources/templates/Productcategorylist.html
@@ -97,12 +97,31 @@
 									th:text="${item?.productPrice}"></span>원</p>
 							<p class="card-text mb-2"><strong class="info-label">설명:</strong> <span
 									th:text="${item?.productDescription}"></span></p>
+									<p class="card-text mb-2"><strong class="info-label">카테고리:</strong> <span
+									th:text="${item?.productCategoryId}"></span></p>
 						</div>
 					</div>
 				</div>
 			</div>
 	</section>
+	<div class="pagination d-flex justify-content-center">
+		<ul class="pagination">
 
+			<li th:if="${currentPage > 1}">
+				<a th:href="@{/productcategorylist(do=productcategorylist, page=${currentPage - 1})}"> ◀</a>
+			</li>
+			<li th:each="page : ${#numbers.sequence(1, totalPages)}">
+				<span th:if="${page == currentPage}">
+					<strong th:text="${page}" style="margin-right: 10px;"></strong>
+				</span>
+				<a th:if="${page != currentPage}" th:href="@{/productcategorylist(do='productcategorylist', page=${page})}"
+					th:text="${page}" style="margin-right: 10px;"></a>
+			</li>
+			<li th:if="${currentPage < totalPages}">
+				<a th:href="@{/productcategorylist(do=productcategorylist, page=${currentPage + 1})}"> ▶ </a>
+			</li>
+
+	</div>
 	<!-- Footer -->
 	<!-- Footer-->
 	<footer class="py-5 bg-dark">
