--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Insert title here</title>
-</head>
-<body>
+<meta charset="UTF-8">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/basic">
+<th:block layout:fragment="title">
+    <title>리스트 페이지</title>
+</th:block>
 
-
-<h2>게시글 목록</h2>
-
-<table border="1">
-    <tr>
-        <td>번호</td>
-        <td>작성자</td>
-        <td>제목</td>
-        <td>작성일</td>
-        <td>조회수</td>
-    </tr>
-
-     <!-- c:forEach loop -->
-    <tr>
-        <td>boardNum 값</td>
-        <td>writer 값</td>
-        <td><a href="check?boardNum=boardNum 값">title 값</a></td>
-        <td>wrDate 값 (yyyy/MM/dd 형식으로 변환)</td>
-        <td>viewCnt 값</td>
-    </tr>
-    <!-- End of c:forEach loop -->
-
-</table>
-
-
-<!-- c:if and c:forEach loop -->
-<c:if test="pc.prev 값">
-    <a class="page-link" href="list?page=pc.paging.page - 1&countePerPage=pc.paging.countPerPage"
-       style="background-color: #ff52a0; margin-top: 0; heght: 40px; color: white; border: 0px solid #f78f24; opacity: 0.8">이전</a>
-</c:if>
-
-<c:forEach var="pageNum" begin="pc.beginPage" end="pc.endPage">
-    <a href="/demo/list?page=pageNum&countePerPage=pc.paging.countPerPage&keyword=pc.paging.keyword&condition=pc.paging.condition"
-       class="page-link" style="margin-top: 0; height: 40px; color: pink; border: 1px solid pink;">pageNum 값</a>
-</c:forEach>
-
-<c:if test="pc.next 값">
-    <a class="page-link" href="list?page=pc.paging.page + 1&countePerPage=pc.paging.countPerPage"
-       style="background-color: #ff52a0; margin-top: 0; height: 40px; color: white; border: 0px solid #f78f24; opacity: 0.8">다음</a>
-</c:if>
-<!-- End of c:if and c:forEach loop -->
-
-<p>
-    <a href="write">게시글 작성하기</a>
-</p>
-<p>
-    <a href="list?page=1&countPerPage=5">5</a>
-    <a href="list?page=1&countPerPage=10">10</a>
-    <a href="list?page=1&countPerPage=15">15</a>
-</p>
-
-<form action="list">
-    <select id="condition" class="form-control" name="condition">
-        <option value="title">제목</option>
-        <option value="content">내용</option>
-        <option value="writer">작성자</option>
-        <option value="titleContent">제목+내용</option>
-    </select>
-
-    <div class="form-group col-sm-4">
-        <div class="input-group">
-            <input type="text" class="form-control" name="keyword" id="keywordInput" placeholder="검색어">
-            <span class="input-group-btn">
-                <input type="submit" value="검색" class="btn btn-izone btn-flat" id="searchBtn">
-            </span>
-        </div>
+<th:block layout:fragment="content">
+    <div class="page_tits">
+        <h3>게시판 관리</h3>
+        <p class="path"><strong>현재 위치 :</strong> <span>게시판 관리</span> <span>리스트형</span> <span>리스트</span></p>
     </div>
-</form>
 
-</body>
+    <div class="content">
+        <section>
+            <!--/* 검색 */-->
+            <div class="search_box">
+                <form id="searchForm" onsubmit="return false;" autocomplete="off">
+                    <div class="sch_group fl">
+                        <select title="검색 유형 선택">
+                            <option value="">전체 검색</option>
+                            <option value="">제목</option>
+                            <option value="">내용</option>
+                        </select>
+                        <input type="text" placeholder="키워드를 입력해 주세요." title="키워드 입력"/>
+                        <button type="button" class="bt_search"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>
+                    </div>
+                </form>
+            </div>
+
+            <!--/* 리스트 */-->
+            <table class="tb tb_col">
+                <colgroup>
+                    <col style="width:50px;"/><col style="width:7.5%;"/><col style="width:auto;"/><col style="width:10%;"/><col style="width:15%;"/><col style="width:7.5%;"/>
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="col"><input type="checkbox"/></th>
+                    <th scope="col">번호</th>
+                    <th scope="col">제목</th>
+                    <th scope="col">작성자</th>
+                    <th scope="col">등록일</th>
+                    <th scope="col">조회</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${not #lists.isEmpty( posts )}" th:each="row, status : ${posts}">
+                    <td><input type="checkbox"/></td>
+                    <td th:text="${row.noticeYn == false ? (status.size - status.index) : '공지'}"></td>
+                    <td class="tl"><a th:href="@{/view.do( id=${row.id} )}" th:text="${row.title}"></a></td>
+                    <td th:text="${row.writer}"></td>
+                    <td th:text="${#temporals.format( row.createdDate, 'yyyy-MM-dd HH:mm ' )}"></td>
+                    <td th:text="${row.viewCnt}"></td>
+                </tr>
+
+                <tr th:unless="${not #lists.isEmpty( posts )}">
+                    <td colspan="5">
+                        <div class="no_data_msg">검색된 결과가 없습니다.</div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <!--/* 페이지네이션 */-->
+            <div class="paging">
+                <a href="#" class="page_bt first">첫 페이지</a><a href="#" class="page_bt prev">이전 페이지 그룹</a>
+                <p><span class="on">1</span><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">8</a><a href="#">9</a><a href="#">10</a></p>
+                <a href="#" class="page_bt next">다음 페이지 그룹</a><a href="#" class="page_bt last">마지막 페이지</a>
+            </div>
+
+            <!--/* 버튼 */-->
+            <p class="btn_set tr">
+                <a th:href="@{/write.do}" class="btns btn_st3 btn_mid">글쓰기</a>
+            </p>
+        </section>
+    </div> <!--/* .content */-->
+</th:block>
 </html>
