--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -44,12 +44,12 @@
 			<div class="">
 				<br>
 				<div class="containercol-12 text-center mb-4">
-					<h3>상품 리스트</h3>
+					<h3>전체 상품 리스트</h3>
 					<p></p>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=1)}">카테고리 1</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=2)}">카테고리 2</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=9)}">카테고리 9</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=1)}">카테고리 1</a>
+					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
+					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=2)}">ㅎㅇ</a>
+					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=9)}">ㄹㄹ</a>
+					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=4)}">ㅁㅁ</a>
 				</div>
 
 
