--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -16,10 +16,10 @@
                     <a class="nav-link" th:href="@{/productlist}">상품목록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/openReviewList.do}">리뷰게시판</a>
+                    <a class="nav-link" th:href="@{/list.do}">리뷰게시판</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{#}">장바구니</a>
+                    <a class="nav-link" th:href="@{/order}">장바구니</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin.do}">관리자페이지</a>
