--- a/src/main/resources/templates/test/portOne.html
+++ b/src/main/resources/templates/test/portOne.html
@@ -27,24 +27,25 @@
                 //결제 값이 요청 값과 같은지 검증합니다
                 console.log(rsp)
                 console.log(typeof rsp.paid_amount)
-              if(rsp.success){
-                  console.log("ajax시작")
-                $.ajax({
-                  url: "/payment/validate/",
-                  method: "GET",
-                  contentType: "application/json",
-                  data:{
-                    impUid: rsp.imp_uid,            // 결제 고유번호
-                    orderId: rsp.merchant_uid,   // 주문번호
-                    amount: rsp.paid_amount     // 결제 금액
-                  },
-                }).done(function (data) {
-                  // 가맹점 서버 결제 API 성공시 로직
-                })
+                if (rsp.success) {
+                    console.log("ajax시작")
+                    $.ajax({
+                        url: "/payment/validate/",
+                        method: "GET",
+                        contentType: "application/json",
+                        data: {
+                            impUid: rsp.imp_uid,            // 결제 고유번호
+                            orderId: rsp.merchant_uid,   // 주문번호
+                            paymentPrice: rsp.paid_amount,     // 결제 금액
+                            userId: 1,
+                        },
+                    }).done(function (data) {
+                        // 가맹점 서버 결제 API 성공시 로직
+                    })
 
-              }else {
-                alert("결제에 실패하였습니다. "+ rsp.error_msg)
-              }
+                } else {
+                    alert("결제에 실패하였습니다. " + rsp.error_msg)
+                }
 
             });
         }
