--- a/src/main/resources/templates/test/portOne.html
+++ b/src/main/resources/templates/test/portOne.html
@@ -10,15 +10,15 @@
 
         function requestPay() {
             //이하 각종 결제정보를 담는 변수 관리
-            var amount = document.getElementById('amount').value;
-            var nameinput = document.getElementById('nameinput').value;
+            // var amount = document.getElementById('amount').value;
+            // var nameinput = document.getElementById('nameinput').value;
             var uid = document.getElementById('uid').value;
             IMP.request_pay({
                 pg: "kakaopay",
                 merchant_uid: uid,   // 주문번호
                 // merchant_uid: "ORD20180131-0000011",   // 주문번호
-                name: nameinput,                      //상품 이름
-                amount: amount,                         // Number 타입 결제 금액
+                name: "테스트 구매",                      //상품 이름
+                amount: 4500,                         // Number 타입 결제 금액
                 buyer_email: "lunatic1702@gmail.com",   //메일
                 buyer_name: "조은마켓 기술지원팀",       //
                 buyer_tel: "010-6608-3897",         //전화번호
@@ -27,18 +27,19 @@
                 //결제 값이 요청 값과 같은지 검증합니다
                 console.log(rsp)
                 console.log(typeof rsp.paid_amount)
+                console.log(typeof rsp.imp_uid)
                 if (rsp.success) {
                     console.log("ajax시작")
                     $.ajax({
-                        url: "/payment/validate/",
-                        method: "GET",
+                        url: "/payment/validate",
+                        method: "POST",
                         contentType: "application/json",
-                        data: {
-                            impUid: rsp.imp_uid,            // 결제 고유번호
+                        data: JSON.stringify({
+                            impUid : rsp.imp_uid,            // 결제 고유번호
                             orderId: rsp.merchant_uid,   // 주문번호
                             paymentPrice: rsp.paid_amount,     // 결제 금액
                             userId: 1,
-                        },
+                        }),
                     }).done(function (data) {
                         // 가맹점 서버 결제 API 성공시 로직
                     })
@@ -55,9 +56,9 @@
 </head>
 <body>
 <div>
-    <p><input type="text" id="nameinput">
+<!--    <p><input type="text" id="nameinput">-->
     <p><input type="text" id="uid">
-    <p><input type="text" id="amount">
+<!--    <p><input type="text" id="amount">-->
 
 </div>
 <button onclick="requestPay()">테스트 결제</button>
