--- a/src/main/resources/templates/ProductDetail.html
+++ b/src/main/resources/templates/ProductDetail.html
@@ -93,8 +93,8 @@
 									<div class="row">
 										<div class="col-md-3 px-3">
 											<!-- 장바구니 아이콘 -->
-											<form th:action="@{/ordershow}" method="get">
-												<a th:href="@{/ordershow(order=${item?.productId})}">
+											<form th:action="@{/order}" method="get">
+												<a th:href="@{/order(productId=${item?.productId})}">
 													<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100" height="80">
 
 												</a>
