--- a/src/main/resources/templates/Productcategorylist.html
+++ b/src/main/resources/templates/Productcategorylist.html
@@ -47,10 +47,16 @@
 				<div th:each="categoryList : ${categoryList}" class="containercol-12 text-center mb-4">
 					<h3><span th:text="${categoryList?.productCategoryName}"></span> 상품 리스트</h3>
 					<p></p>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=2)}">ㅎㅇ</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=9)}">ㄹㄹ </a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=4)}">ㅁㅁ</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=2)}">도서</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=3)}">가전</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=4)}">의류</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=5)}">완구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=6)}">잡화</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=7)}">주방용품 </a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=8)}">문구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=9)}">가구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=10)}">중고</a>
 				</div>
 			</div>
 			<br>
