--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -43,13 +43,19 @@
 		<div class="container product px-4 px-lg-5">
 			<div class="">
 				<br>
-				<div class="containercol-12 text-center mb-4">
+				<div class=" containercol-12 text-center mb-4">
 					<h3>전체 상품 리스트</h3>
 					<p></p>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=2)}">ㅎㅇ</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=9)}">ㄹㄹ</a>
-					<a class="btn btn-outline-dark px-5" th:href="@{/productcategorylist(category=4)}">ㅁㅁ</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=2)}">도서</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=3)}">가전</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=4)}">의류</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=5)}">완구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=6)}">잡화</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=7)}">주방용품 </a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=8)}">문구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=9)}">가구</a>
+					<a class="btn btn-outline-dark px-6" th:href="@{/productcategorylist(category=10)}">중고</a>
 				</div>
 
 
@@ -98,8 +104,8 @@
 									<input type="hidden" name="order" th:value="${item?.productId}">
 									<button type="submit" class="btn btn-outline-dark">상세정보</button>
 								</form>
-								<form th:action="@{/ordershow}" method="get">
-									<a th:href="@{/ordershow(order=${item?.productId})}">
+								<form th:action="@{/order}" method="get">
+									<a th:href="@{/order(productId=${item?.productId})}">
 										<img src="/jpg/carttest.png" alt="장바구니 이미지" width="50" height="50">
 									</a>
 								</form>
