--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -2,12 +2,15 @@
 <meta charset="UTF-8">
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/basic">
+<head th:replace="header :: main-head"> </head>
+<body th:replace="body :: main-body"> </body>
+</html>
 <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
+
 
 <th:block layout:fragment="title">
     <title>글작성 페이지</title>
 </th:block>
-
 <th:block layout:fragment="content">
     <div class="page_tits">
         <h3>게시판 관리</h3>
@@ -62,53 +65,54 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-    /*<![CDATA[*/
+        /*<![CDATA[*/
 
-        window.onload = () => {
-        renderPostInfo();
-}
-
-
- //게시글 상세정보 렌더링
-    function renderPostInfo() {
-    const post = [[ ${post} ]];
-
-    if ( !post ) {
-        initCreatedDate();
-        return false;
+            window.onload = () => {
+            renderPostInfo();
     }
 
-    const form = document.getElementById('saveForm');
-    const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
-    form.isNotice.checked = post.noticeYn;
-    form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+
+     //게시글 상세정보 렌더링
+        function renderPostInfo() {
+        const post = [[ ${post} ]];
+
+        if ( !post ) {
+            initCreatedDate();
+            return false;
+        }
+
+        const form = document.getElementById('saveForm');
+        const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
+        form.isNotice.checked = post.noticeYn;
+        form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
 
 
-    fields.forEach(field => {
-        form[field].value = post[field];
-    })
-}
+        fields.forEach(field => {
+            form[field].value = post[field];
+        })
+    }
 
 
-// 등록일 초기화
-function initCreatedDate() {
-    document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
-}
+    // 등록일 초기화
+    function initCreatedDate() {
+        document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
+    }
 
 
-// 게시글 저장(수정)
-function savePost() {
-    const form = document.getElementById('saveForm');
-    const fields = [form.title, form.writer, form.content];
-    const fieldNames = ['제목', '이름', '내용'];
-    alert("저장하시겠습니까?") //작동함
+    // 게시글 저장(수정)
 
-    document.getElementById('saveBtn').disabled = true;
-    form.noticeYn.value = form.isNotice.checked;
-    form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
-    form.submit();
-    /*]]>*/
-}
+    function savePost() {
+        const form = document.getElementById('saveForm');
+        const fields = [form.title, form.writer, form.content];
+        const fieldNames = ['제목', '이름', '내용'];
+        alert("저장하시겠습니까?") //작동함
+
+        document.getElementById('saveBtn').disabled = true;
+        form.noticeYn.value = form.isNotice.checked;
+        form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
+        form.submit();
+        /*]]>*/
+    }
     </script>
 </th:block>
 </html>
