어드민메뉴+상품로그인
어드민 로그인때만 어드민메뉴 뜨게함
카트 아이콘 클릭시 로그인으로 넘어가게함

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -22,7 +22,8 @@
                     <a class="nav-link" th:href="@{/order}">장바구니</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin.do}">관리자페이지</a>
+<!--                    관리자 로그인 시에만 보이게 수정 8/8 16:24 (진석) -->
+                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin.do}">관리자페이지</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
