--- a/src/main/resources/templates/ProductDetail.html
+++ b/src/main/resources/templates/ProductDetail.html
@@ -89,15 +89,19 @@
 
 									<br>
 									<hr>
-									
+
 									<div class="row">
 										<div class="col-md-3 px-3">
 											<!-- 장바구니 아이콘 -->
-											<form th:action="@{/order}" method="get">
-												<a th:href="@{/order(productId=${item?.productId})}">
-													<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100" height="80">
-
-												</a>
+											<form th:action="@{/order}" method="get"
+												onsubmit="return confirm('상품을 구매하시겠습니까?')">
+												<button type="submit"
+													style="border: none; background: none; padding: 0; cursor: pointer;">
+													<a th:href="@{/order(productId=${item?.productId})}">
+														<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100"
+															height="80">
+													</a>
+												</button>
 											</form>
 										</div>
 										<div class="col-md-3 px-3">
