--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -83,7 +83,7 @@
 			<div class=" px-4 px-lg-5">
 				<div class="row">
 					<ul class="pagination" th:if="${totalPages == 0}">
-						<p>검색된 상품이 존재하지 않습니다.</p>
+						<p>등록된 상품이 존재하지 않습니다.</p>
 					</ul>
 					<!-- Use th:each to iterate over the list of items -->
 					<div th:each="item : ${items}" class=" col-md-6 mb-4">
@@ -109,10 +109,13 @@
 									<input type="hidden" name="order" th:value="${item?.productId}">
 									<button type="submit" class="btn btn-secondary">상세정보</button>
 								</form>
-								<form th:action="@{/order}" method="get">
-									<a th:href="@{/order(productId=${item?.productId})}">
-										<img src="/jpg/carttest.png" alt="장바구니 이미지" width="50" height="50">
-									</a>
+								<form th:action="@{/order}" method="get" onsubmit="return confirm('상품을 구매하시겠습니까?')">
+									<button type="submit"
+										style="border: none; background: none; padding: 0; cursor: pointer;">
+										<a th:href="@{/order(productId=${item?.productId})}">
+											<img src="/jpg/carttest.png" alt="장바구니 이미지" width="50" height="50">
+										</a>
+									</button>
 								</form>
 							</div>
 						</div>
