--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -3,17 +3,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/basic">
 <head th:replace="header :: main-head"> </head>
-<body th:replace="body :: main-body"> </body>
+
 
 
 <th:block layout:fragment="title">
     <title>리스트 페이지</title>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="page_tits">
-        <h3>게시판 관리</h3>
-        <p class="path"><strong>현재 위치 :</strong> <span>게시판 관리</span> <span>리스트형</span> <span>리스트</span></p>
-    </div>
 
     <div class="content">
         <section>
@@ -21,6 +17,8 @@
             <div class="search_box">
                 <form id="searchForm" onsubmit="return false;" autocomplete="off">
                     <div class="sch_group fl">
+                        <h4 class ="board_title"> 게시판
+                        <h4 class ="board_title"> Q&A
                         <select title="검색 유형 선택">
                             <option value="">전체 검색</option>
                             <option value="">제목</option>
