--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/basic">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/header">
 <th:block layout:fragment="title">
     <title>상세 페이지</title>
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="page_tits">
-        <h3>게시판 관리</h3>
-        <p class="path"><strong>현재 위치 :</strong> <span>게시판 관리</span> <span>리스트형</span> <span>상세정보</span></p>
-    </div>
 
     <div class="content">
         <section>
