--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -44,6 +44,7 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">주문 완료</button>
+<!--                <button type="button" onclick="requestPay()" class="btn btn-primary">주문 완료</button>-->
             </form>
         </div>
     </div>
@@ -52,6 +53,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!--<script src="/js/payment.js"></script>-->
 
 </body>
 </html>
