post 파일 통일2차

--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/basic">
-<head th:replace="header :: main-head"> </head>
+<head th:replace="post_header :: main-head"> </head>
 
 
 
