--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/header">
 <th:block layout:fragment="title">
-    <head th:replace="header :: main-head"> </head>
+    <head th:replace="post_header :: main-head"> </head>
     <title>상세 페이지</title>
 </th:block>
 
