--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -14,5 +14,12 @@
 <button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
 <button><a th:href="@{/productList.do}">상품목록 조회</a></button>
 <button><a th:href="@{/productUpdate.do}">상품 수정</a></button>
+
+    <div th:text="${#authentication.name}"></div>
+    <div th:text="${#authentication.principal.username}"></div>
+    <div th:if="${#authentication.isAuthenticated()}">
+        <p>인증된 사용자입니다.</p>
+    </div>
+
 </div>
 </html>
