회원정보에 기존값넣기 + user 디렉토리 생성
레이아웃관련은 건드리기 애로사항이 있어 보류.

--- a/src/main/resources/templates/user/edituser.html
+++ b/src/main/resources/templates/user/edituser.html
@@ -15,17 +15,17 @@
 
         <div class="mb-3">
             <label for="address" class="form-label">주소:</label>
-            <input type="text" class="form-control" id="address" name="userAddress" required>
+            <input type="text" class="form-control" id="address" name="userAddress" th:value="${user.userAddress}" required>
         </div>
 
         <div class="mb-3">
             <label for="phone" class="form-label">번호:</label>
-            <input type="text" class="form-control" id="phone" name="userPhone" required>
+            <input type="text" class="form-control" id="phone" name="userPhone" th:value="${user.userPhone}" required>
         </div>
 
         <div class="mb-3">
             <label for="email" class="form-label">이메일:</label>
-            <input type="email" class="form-control" id="email" name="userEmail" required>
+            <input type="email" class="form-control" id="email" name="userEmail" th:value="${user.userEmail}" required>
         </div>
 
         <button type="submit" class="btn btn-primary">변경</button>
