--- a/src/main/resources/templates/Productcategorylist.html
+++ b/src/main/resources/templates/Productcategorylist.html
@@ -44,21 +44,20 @@
 			<div class="">
 				<br>
 
-				<div th:each="categoryList : ${categoryList}" class="containercol-12 text-center mb-4">
-					<h3><span th:text="${categoryList?.productCategoryName}"></span> 상품 리스트</h3>
+
+				<div th:each="categoryName : ${categoryName}" class="container col-12 text-center mb-4">
+					<h3><span th:text="${categoryName?.productCategoryName}"></span> 상품 리스트</h3>
 					<p></p>
 					<a class="btn btn-primary btn-lg px-4" th:href="@{/productlist}">전체상품</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=1)}">테스트카테고리</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=2)}">도서</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=3)}">가전</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=4)}">의류</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=5)}">완구</a>
-					<p></p>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=6)}">잡화</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=7)}">주방용품 </a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=8)}">문구</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=9)}">가구</a>
-					<a class="btn btn-secondary btn-lg px-4" th:href="@{/productcategorylist(category=10)}">중고</a>
+
+					<!-- 자동으로 생성된 카테고리 버튼들 -->
+					<div class="d-flex flex-wrap px-5 py-2"> <!-- 가로로 정렬하고 넘치면 줄바꿈 -->
+						<div th:each="category : ${categoryList}" class="mb-2">
+							<a class="btn btn-secondary btn-lg px-4 mx-1"
+								th:href="@{/productcategorylist(category=${category.productCategoryId})}"
+								th:text="${category.productCategoryName}"></a>
+						</div>
+					</div>
 				</div>
 				<br>
 				<!-- 상품 리스트 반복 -->
@@ -69,7 +68,7 @@
 							<p>등럭된 상품이 존재하지 않습니다.</p>
 						</ul>
 						<div th:each="item : ${items}" class=" col-md-6 mb-4">
-							<div th:each="categoryList : ${categoryList}">
+							<div th:each="categoryName : ${categoryName}">
 								<div class="container">
 									<p></p>
 									<div class="row justify-content-center">
