구매페이지 이동 오류수정

--- a/src/main/resources/templates/ProductDetail.html
+++ b/src/main/resources/templates/ProductDetail.html
@@ -97,10 +97,9 @@
 												onsubmit="return confirm('상품을 구매하시겠습니까?')">
 												<button type="submit"
 													style="border: none; background: none; padding: 0; cursor: pointer;">
-													<a th:href="@{/order(productId=${item?.productId})}">
-														<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100"
-															height="80">
-													</a>
+													<input type="hidden" name="productId"
+														th:value="${item?.productId}" />
+													<img src="/jpg/carttest.png" alt="장바구니 이미지" width="100" height="80">
 												</button>
 											</form>
 										</div>
