--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" th:href="@{/list.do}">리뷰게시판</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/order}">장바구니</a>
+                    <a class="nav-link" th:href="@{/order-history}">주문정보</a>
                 </li>
                 <li class="nav-item">
 <!--                    관리자 로그인 시에만 보이게 수정 8/8 16:24 (진석) -->
