--- a/src/main/resources/templates/order_complete.html
+++ b/src/main/resources/templates/order_complete.html
@@ -12,12 +12,12 @@
 <!-- 주문 정보나 확인 메시지 등을 추가할 수 있습니다. -->
 <p>주문이 성공적으로 처리되었습니다.</p>
 <div>
-    <input type="hidden" th:value="${order.ordersId}" id="ordersId">
-    <input type="hidden" th:value="${order.userId}" id="userId">
-    <input type="hidden" th:value="${order.productId}" id="productId">
-<!--    <input type="hidden" th:value="${price}" id="price">-->
-    <input type="hidden" th:value="${product.productPrice}" id="price">
-    <input type="hidden" th:value="${product.productName}" id="productName">
+<!--    <input type="hidden" th:value="${order.ordersId}" id="ordersId">-->
+<!--    <input type="hidden" th:value="${order.userUseId}" id="userUseId">-->
+<!--    <input type="hidden" th:value="${order.productId}" id="productId">-->
+<!--&lt;!&ndash;    <input type="hidden" th:value="${price}" id="price">&ndash;&gt;-->
+<!--    <input type="hidden" th:value="${product.productPrice}" id="price">-->
+<!--    <input type="hidden" th:value="${product.productName}" id="productName">-->
 </div>
 <script src="/js/readyRequestPay.js"></script>
 </body>
