order_complete 수정 중
불필요한 코드 제거
orderDto toString() 추가
상품 정보에서 order로 넘어갈 때 productId 1인것만 가져 오는 버그 발생
orderComplete 요소 추가

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -34,12 +34,12 @@
                 <div class="form-group">
                     <label>결제방법:</label><br>
                     <div class="form-check form-check-inline">
-                        <input type="radio" id="kakaoPay" name="paymentMethod" value="카카오 결제" class="form-check-input" required>
+                        <input type="radio" id="kakaoPay" name="paymentMethod" value="kakaopay" class="form-check-input" required>
                         <label for="kakaoPay" class="form-check-label">카카오 결제</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input type="radio" id="cardPayment" name="paymentMethod" value="토스 페이" class="form-check-input" required>
-                        <label for="cardPayment" class="form-check-label">토스 페이</label>
+                        <input type="radio" id="tossPay" name="paymentMethod" value="tosspay" class="form-check-input" required>
+                        <label for="tossPay" class="form-check-label">토스 페이</label>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">주문 완료</button>
