--- a/src/main/resources/templates/order_complete.html
+++ b/src/main/resources/templates/order_complete.html
@@ -25,6 +25,8 @@
     <input type="hidden" th:value="${product.productPrice}" id="price">
     <input type="hidden" th:value="${product.productName}" id="productName">
     <input type="hidden" th:value="${paymentMethod}" id="paymentMethod">
+    <input type="hidden" th:value="${userId}" id="userId">
+
 
 </div>
 <script src="/js/readyRequestPay.js"></script>
