--- a/src/main/resources/templates/post_list.html
+++ b/src/main/resources/templates/post_list.html
@@ -17,8 +17,17 @@
 			<!--/* 검색 */-->
 			<div class="search_box">
 				<form id="searchForm" onsubmit="return false;" autocomplete="off">
-					<div class="sch_group fl">
-						<h4 class="board_title"> 게시판
+
+					<h2>
+					 <a class="navbar-brand" href="/">조은마켓&nbsp;</a>
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">로그인&nbsp;</a>
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">로그아웃&nbsp;</a>
+                    <a class="nav-link" th:href="@{/productlist}">상품목록&nbsp;</a>
+                    <a class="nav-link" th:href="@{/list.do}">리뷰게시판&nbsp;</a>
+                    <a class="nav-link" th:href="@{/order-history}">주문정보&nbsp;</a>
+                    <a class="nav-link" sec:authorize="hasRole('ADMIN')" th:href="@{/admin.do}">관리자페이지&nbsp;</a>
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/edit}">정보 변경&nbsp;</a>
+					</h2>
 							<h4 class="board_title"> Q&A
 								<select title="검색 유형 선택">
 									<option value="">전체 검색</option>
@@ -76,7 +85,7 @@
 					class="page_bt prev">◀</a>
 
 				<p th:each="page : ${#numbers.sequence(1, totalPages)}">
-					<a th:if="${page == currentPage}" th:text="${page}"></a>
+					<a th:if="${page == currentPage}" th:href="@{/list.do(do='list.do', page=${page})}" th:text="${page}"></a>
 					<a th:if="${page != currentPage}" th:href="@{/list.do(do='list.do', page=${page})}" th:text="${page}"></a>
 				</p>
 
